--- a/raiden/ui/web/src/app/components/event-list/event-list.component.html
+++ b/raiden/ui/web/src/app/components/event-list/event-list.component.html
@@ -1,16 +1,16 @@
 <div class="ui-widget-header" style="padding:4px 10px;border-bottom: 0 none">
   <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
-  <input #gb type="text" pInputText size="50" placeholder="Filter" class="ui-inputtext ui-corner-all ui-state-default">
+  <input #gb type="text" pInputText size="25" placeholder="Filter" class="ui-inputtext ui-corner-all ui-state-default">
 </div>
-<p-dataTable [value]="events$ | async" expandableRows="true" [paginator]="true" [rows]="20" [globalFilter]="gb" resizableColumns="true">
+<p-dataTable [value]="events$ | async" expandableRows="true" paginator="true" [rows]="10" resizableColumns="true" [globalFilter]="gb">
   <p-column expander="true" styleClass="col-icon" [style]="{'width': '2.5em'}"></p-column>
-  <p-column field="block_number" header="Block Number" [style]="{'width': '10%'}" [sortable]="true"></p-column>
-  <p-column field="timestamp" header="Time" [style]="{'width': '10%'}" [sortable]="true">
+  <p-column field="block_number" header="Block Number" [style]="{'width': '10%'}" sortable="true"></p-column>
+  <p-column field="timestamp" header="Time" [style]="{'width': '10%'}" sortable="true">
     <ng-template let-col let-data="rowData" pTemplate="body">
       <span [title]="data[col.field] | date:'medium'">{{ data[col.field] | date:'y-MM-dd HH:mm:ss' }}</span>
     </ng-template>
   </p-column>
-  <p-column field="event_type" header="Event Type" [style]="{'width': '15%'}" [sortable]="true"></p-column>
+  <p-column field="event_type" header="Event Type" [style]="{'width': '15%'}" sortable="true"></p-column>
   <p-column field="data" header="Data">
     <ng-template let-col let-data="rowData" pTemplate="body">
       <span>{{ data['data'] }}</span>
