Open Channel to own dialog

--- a/raiden/ui/web/src/app/app.component.css
+++ b/raiden/ui/web/src/app/app.component.css
@@ -1,5 +1,6 @@
 .nav-side-menu {
-  overflow: auto;
+  overflow: hidden;
+  white-space: nowrap;
   font-family: verdana;
   font-size: 12px;
   font-weight: 200;
