Set topnav bar text to Raiden Network

--- a/raiden/ui/web/src/app/app.component.html
+++ b/raiden/ui/web/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="topnav" id="myTopnav">
   <img src="assets/favicon.png">
-  <a target="_blank" href="http://raiden.network/">Raiden</a>
+  <a target="_blank" href="http://raiden.network/">Raiden Network</a>
   <strong>{{raidenAddress}}</strong>
   <i class="fa fa-bars fa-2x toggle-btn" (click)="menuCollapsed=!menuCollapsed"></i>
 </div>
