--- a/raiden/ui/web/src/app/components/home/home.component.html
+++ b/raiden/ui/web/src/app/components/home/home.component.html
@@ -23,4 +23,5 @@
       <p>Low transaction fees allow to efficiently transfer tiny values.</p>
     </li>
   </ul>
+  <p>Click <a href="http://raiden-network.readthedocs.io">here</a> to visit the Raiden Network documentation.</p>
 </div>
