Use target=_blank on documentation link

--- a/raiden/ui/web/src/app/components/home/home.component.html
+++ b/raiden/ui/web/src/app/components/home/home.component.html
@@ -23,5 +23,5 @@
       <p>Low transaction fees allow to efficiently transfer tiny values.</p>
     </li>
   </ul>
-  <p>Click <a href="http://raiden-network.readthedocs.io">here</a> to visit the Raiden Network documentation.</p>
+  <p><a target="_blank" href="http://raiden-network.readthedocs.io">Click here</a> to visit the Raiden Network documentation.</p>
 </div>
